test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_18.k
@deprecated(err_version="v1.16")
schema Person[name: str, age: int]:
    """"""

person = Person("name", 10)
